changed links, added unordered list

--- a/lib2024/assg-1/index.html
+++ b/lib2024/assg-1/index.html
@@ -16,13 +16,23 @@
 			<br>but you may call me Break Tag. 
 		</p>
 		<section><h3>This is also a section</h3>
-			<p>I'm a pretty important part of this section if I do say so myself.
+			<p>I'm a pretty important part of this section if I do say so myself.</p>
 			<aside>
-			Unfortunately, I'm not as important a part of the section.
+				<p> Unfortunately, I'm not as important a part of the section.</p>
 			</aside>
-			</p>
-			<h4>Have some links. You'll find them in a Div Tag.<h4>
-				<div> <a href="https://www.google.com/webhp?hl=en&sa=X&ved=0ahUKEwjBx4bHh5HnAhUTXM0KHTxZBYgQPAgH">Queries? Follow me.</a> <a href="https://www.amazon.ca/">$$$</a></div>
+			<h4>Have some links. They're in a Div Tag.<h4>
+				<div> 
+					<a href="https://www.youtube.com/watch?v=KmtzQCSh6xk">Want to dance to a BOP?</a> <a href="https://www.youtube.com/watch?v=ZZ5LpwO-An4">Or watch a colourful video?</a>
+				</div>
+		</section>
+		<section><h5>We're lists in a Div tag</h5>
+			<div>
+				<ul>
+					<li>I am Unordered List Element Uno.</li>
+					<li>I am Unordered List Element Dos.</li>
+					<li>I am Unordered List Element Tres.</li>
+				</ul>
+			</div>
 		</section>
 	</main>
 </body>
