added ordered list and footer

--- a/lib2024/assg-1/index.html
+++ b/lib2024/assg-1/index.html
@@ -2,38 +2,47 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" name="Author" content="Sabrina Fournier">
-	<title>Assignment 1 Submission</title>
+	<title>Assig-1 Sub</title>
 </head>
 <body>
 	<header>
 		<h1>Assignment 1</h1>
 	</header>
-	<section><h2>This is the main section</h2></section>
 	<main>
-		<div>My name is Div Tag.</div>
-		<p>My name is Paragraph Tag.</p>
-		<p>My name is also Paragraph Tag,
-			<br>but you may call me Break Tag. 
-		</p>
-		<section><h3>This is also a section</h3>
+		<section>
+			<h2>This is the Main Section</h2>	
+			<div>My name is Div Tag.</div>
+			<p>My name is Paragraph Tag.</p>
+			<p>My name is also Paragraph Tag,
+				<br>but you may call me Break Tag.</p>
+		</section>
+		<section>
+			<h3>This is also a Section</h3>
 			<p>I'm a pretty important part of this section if I do say so myself.</p>
 			<aside>
 				<p> Unfortunately, I'm not as important a part of the section.</p>
 			</aside>
 			<h4>Have some links. They're in a Div Tag.<h4>
-				<div> 
-					<a href="https://www.youtube.com/watch?v=KmtzQCSh6xk">Want to dance to a BOP?</a> <a href="https://www.youtube.com/watch?v=ZZ5LpwO-An4">Or watch a colourful video?</a>
-				</div>
+			<div> 
+				<a href="https://www.youtube.com/watch?v=KmtzQCSh6xk">Want to dance to a BOP?</a> <a href="https://www.youtube.com/watch?v=ZZ5LpwO-An4">Or watch a colourful video?</a>
+			</div>
 		</section>
-		<section><h5>We're lists in a Div tag</h5>
+		<section>
+			<h5>We're lists in a Div tag</h5>
 			<div>
 				<ul>
 					<li>I am Unordered List Element Uno.</li>
 					<li>I am Unordered List Element Dos.</li>
 					<li>I am Unordered List Element Tres.</li>
 				</ul>
+				<ol>
+					<li>I am Ordered List Element Ein.</li>
+					<li>I am Ordered List Element Zwei.</li>
+					<li>I a Ordered List Element Drei.</li>
+				</ol>
 			</div>
 		</section>
 	</main>
+	<footer>I am but a simple footer.</footer>
 </body>
 </html>
