fixed tag errors

--- a/lib2024/assg-1/index.html
+++ b/lib2024/assg-1/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8" name="Author" content="Sabrina Fournier">
+	<meta charset="utf-8">
+	<meta name="Author" content="Sabrina Fournier">
 	<title>Assig-1 Sub</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
 			<aside>
 				<p> Unfortunately, I'm not as important a part of the section.</p>
 			</aside>
-			<h4>Have some links. They're in a Div Tag.<h4>
+			<h4>Have some links. They're in a Div Tag.</h4>
 			<div> 
 				<a href="https://www.youtube.com/watch?v=KmtzQCSh6xk">Want to dance to a BOP?</a> <a href="https://www.youtube.com/watch?v=ZZ5LpwO-An4">Or watch a colourful video?</a>
 			</div>
