--- a/lib2024/assg-1/index.html
+++ b/lib2024/assg-1/index.html
@@ -19,9 +19,9 @@
 		</section>
 		<section>
 			<h3>This is also a Section</h3>
-			<p>I'm a pretty important part of this section if I do say so myself.</p>
+			<p>I'm pretty important in this section.</p>
 			<aside>
-				<p> Unfortunately, I'm not as important a part of the section.</p>
+				<p> Unfortunately, I'm not so important in this section.</p>
 			</aside>
 			<h4>Have some links. They're in a Div Tag.</h4>
 			<div> 
