added link titles

--- a/lib2024/assg-1/index.html
+++ b/lib2024/assg-1/index.html
@@ -25,7 +25,7 @@
 			</aside>
 			<h4>Have some links. They're in a Div Tag.</h4>
 			<div> 
-				<a href="https://www.youtube.com/watch?v=KmtzQCSh6xk">Want to dance to a BOP?</a> <a href="https://www.youtube.com/watch?v=ZZ5LpwO-An4">Or watch a colourful video?</a>
+				<a href="https://www.youtube.com/watch?v=KmtzQCSh6xk" title="Historical internet video">Want to dance to a BOP?</a> <a href="https://www.youtube.com/watch?v=ZZ5LpwO-An4" title="Hey yaya">Or watch a colourful video?</a>
 			</div>
 		</section>
 		<section>
