--- a/lib2024/assg-1/index.html
+++ b/lib2024/assg-1/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="Author" content="Sabrina Fournier">
-	<title>Assig-1 Sub</title>
+	<title>Assig-1 Submission</title>
 </head>
 <body>
 	<header>
