added animal images

--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -12,9 +12,9 @@
 	<header id="header">
 		<h1>Assignment 2</h1>
 	<main id="main" class="main-section">
-		<section id="employee-table" class="main-section-1">
+		<section id="employee-section" class="main-section">
 			<h2>Employee List</h2>
-				<table border="solid black">
+				<table border="solid black" id="employee-table">
 					<thead>
 						<tr>
 							<th>ID</th>
@@ -56,6 +56,32 @@
 							</td>
 						</tr>
 					</tfoot>
+				</table>
+		</section>
+		<section id="animals-section" class="main-section">
+			<h2>Animals</h2>
+				<article>
+					<figure>
+						<img src="img/elephant.jpg" alt="Elephant Picture" width="300" height="200">
+						<figcaption><i>Loxodonta africana.</i> African elephants can live up to 70 years in the wild.</figcaption>
+					</figure>
+					<figure>
+						<img src="img/lion.jpg" alt="Lion Picture" width="300" height="200">
+						<figcaption><i>Panthera leo.</i> By 8 years of age, a lion's nose will have turned from pink to black.</figcaption>
+					</figure>
+					<figure>
+						<img src="img/snake.jpg" alt="Snake Picture" width="300" height="200">
+						<figcaption><i>Oxyuranus scutellatus.</i> An inland taipan's venom can kill an adult man in 30-45 minutes.</figcaption>
+					</figure>
+					<figure>
+						<img src="img/whale.jpg" alt="Whale Picture" width="300" height="200">
+						<figcaption><i>Orcinus orca.</i> Female orcas live for an average of 50 years, while males live on average just 29.</figcaption>
+					</figure>
+					<figure>
+						<img src="img/hawk.jpg" alt="Hawk Picture" width="300" height="200">
+						<figcaption><i>Accipiter gentilis.</i> Northern goshawks normally only vocalize during courtship or nesting season.</figcaption>
+					</figure>
+				</article>	
 		</section>
 	</main>
 
