--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -83,6 +83,17 @@
 					</figure>
 				</article>	
 		</section>
+		<section id="entities-section" class="main main-section">
+			<h2>HTML Entities</h2>
+			<article>
+				<p>Non-breaking space: &#160;</p>
+				<p>Ampersand: &#38;</p>
+				<p>Pound: &#163;</p>
+				<p>Copyright: &#169;</p>
+			</article>
+
+			
+		</section>
 	</main>
 
 </body>
