added special tag section

--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -11,7 +11,7 @@
 <body>
 	<header id="header">
 		<h1>Assignment 2</h1>
-	<main id="main" class="main-section">
+	<main id="main">
 		<section id="employee-section" class="main-section">
 			<h2>Employee List</h2>
 				<table border="solid black" id="employee-table">
@@ -91,10 +91,31 @@
 				<p>Pound: &#163;</p>
 				<p>Copyright: &#169;</p>
 			</article>
-
-			
+		</section>
+		<section id="special-section" class="main-section">
+			<h2>Special Tags:</h2>
+			<article id="special-dl" class="special-tag">
+				<dl>
+					<dt>Coffee</dt>
+					<dd>-A hot drink. Coffee is the world's second largest traded commodity.</dd>
+					<dt>Milk</dt>
+					<dd>-A cold white drink. The greatest amount of milk produced in one year was 59,298 pounds by a Holstein cow named Robthom Sue Paddy.</dd>
+				</dl>
+			</article>	
+			<article id="special-abbr" class="special-tag">
+				<p> <abbr title="Hyper Text Markup Language">HTML</abbr></p>
+				<p><abbr title="Cascading Style Sheet">CSS</abbr></p>
+			</article>
+			<article id="special-deets" class="special-tag">
+				<details>
+					<summary>Did you ever hear the tragedy of Darth Plagueis The Wise?</summary>
+					<p>I thought not. It’s not a story the Jedi would tell you. It’s a Sith legend. Darth Plagueis was a Dark Lord of the Sith, so powerful and so wise he could use the Force to influence the midichlorians to create life… He had such a knowledge of the dark side that he could even keep the ones he cared about from dying. The dark side of the Force is a pathway to many abilities some consider to be unnatural. He became so powerful… the only thing he was afraid of was losing his power, which eventually, of course, he did. Unfortunately, he taught his apprentice everything he knew, then his apprentice killed him in his sleep. Ironic. He could save others from death, but not himself.</p>
+				</details>	
+			</article>
 		</section>
 	</main>
-
+	<footer id="footer">
+		<!--Subscribe for more animal facts.-->
+	</footer>
 </body>
 </html>
