--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -115,6 +115,7 @@
 		</section>
 	</main>
 	<footer id="footer">
+		<h2>Hidden comment:</h2>
 		<!--Subscribe for more animal facts.-->
 	</footer>
 </body>
