--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
 <head>
 	<title>Assignment 2</title>
 	<meta charset="utf-8">
@@ -11,6 +10,7 @@
 <body>
 	<header id="header">
 		<h1>Assignment 2</h1>
+	</header>
 	<main id="main">
 		<section id="employee-section" class="main-section">
 			<h2>Employee List</h2>
