caught up with qa questions

--- a/lib2024/qa/index.html
+++ b/lib2024/qa/index.html
@@ -11,7 +11,7 @@
 		<!-- Qus 1 -->
 		<li>
 			<p>
-				<strong>Qus: </strong>
+				<strong>Ques: </strong>
 				What are the three componets of Web?
 			</p>
 			<p>
@@ -21,12 +21,62 @@
 		<!-- Qus 2 -->
 		<li>
 			<p>
-				<strong>Qus:</strong>
+				<strong>Ques:</strong>
 				Define version control and give one example.
 			</p>
 			<p>
 				<strong>Ans:</strong>
 				Version control is a system that records changes to a file or a set of files over time so that it is possible to easily recall specific versions later. One example of a version control is GitHub.
+			</p>
+		</li>
+		<li>
+			<p>
+				<strong>Ques:</strong>
+				What tag is used to create a paragraph in html? Give an example.
+			</p>
+			<p>
+				<strong>Ans:</strong>
+					&#60;p&#62; is used to create paragraphs. For example:</p>
+						<p>This is a paragraph</p>
+		</li>
+		<li>
+			<p>
+				<strong>Ques:</strong>
+				Identify the odd one out from: &#60;span&#62;, &#60;p&#62;, &#60;a&#62;, and &#60;i&#62; and state why.
+			</p>
+			<p>
+				<strong>Ans:</strong>
+				&#60;p&#62; is the odd one out because the rest are all inline elements while &#60;p&#62; is a block level element.
+			</p>
+		</li>
+		<li>
+			<p>
+				<strong>Ques:</strong>
+				What are the tags required to create a navigation list in HTML?
+			</p>
+			<p>
+				<strong>Ans:</strong>
+				&#60;nav&#62; -> &#60;ol&#62; OR &#60;ul&#62; -> &#60;li&#62;
+			</p>
+		</li>
+		<li>
+			<p>
+				<strong>Ques:</strong>
+				What element is used to create images? Name its attributes.
+			</p>
+			<p>
+				<strong>Ans:</strong>
+				&#60;img&#62;, its attributes are: src= (for the image source), alt= (for the alternate text), width= and height= (for rendering width and height without CSS)
+			</p>
+		</li>
+		<li>
+			<p>
+				<strong>Ques:</strong>
+				Identify the odd one out from these tags: &#60;table&#62;, &#60;tr&#62;, &#60;b&#62;, &#60;td&#62; and state the reason
+			</p>
+			<p>
+				<strong>Ans:</strong>
+				The odd one out is &#60;b&#62;, because the others are all elements used for creating tables, while &#60;b&#62; simply bolds your text. 
 			</p>
 		</li>
   </ol>
