--- a/lib2024/qa/index.html
+++ b/lib2024/qa/index.html
@@ -56,7 +56,7 @@
 			</p>
 			<p>
 				<strong>Ans:</strong>
-				&#60;nav&#62; -> &#60;ol&#62; OR &#60;ul&#62; -> &#60;li&#62;
+				&#60;nav&#62; then &#60;ol&#62; OR &#60;ul&#62; then &#60;li&#62;
 			</p>
 		</li>
 		<li>
@@ -72,7 +72,7 @@
 		<li>
 			<p>
 				<strong>Ques:</strong>
-				Identify the odd one out from these tags: &#60;table&#62;, &#60;tr&#62;, &#60;b&#62;, &#60;td&#62; and state the reason
+				Identify the odd one out from these tags: &#60;table&#62;, &#60;tr&#62;, &#60;b&#62;, &#60;td&#62; and state the reason.
 			</p>
 			<p>
 				<strong>Ans:</strong>
