--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -23,27 +23,27 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr>
-							<td>1</td>
+						<tr align="center">
+							<td >1</td>
 							<td>John</td>
 							<td>john@fakemail.com</td>
 						</tr>
-						<tr>
+						<tr align="center">
 							<td>2</td>
 							<td>Sam</td>
 							<td>sam@fakemail.com</td>
 						</tr>
-						<tr>
+						<tr align="center">
 							<td>1</td>
 							<td>Bob</td>
 							<td>bob@fakemail.com</td>
 						</tr>
-						<tr>
+						<tr align="center">
 							<td>1</td>
 							<td>Jack</td>
 							<td>jack@fakemail.com</td>
 						</tr>
-						<tr>
+						<tr align="center">
 							<td>1</td>
 							<td>Rob</td>
 							<td>rob@fakemail.com</td>
