--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -83,7 +83,7 @@
 					</figure>
 				</article>	
 		</section>
-		<section id="entities-section" class="main main-section">
+		<section id="entities-section" class="main-section">
 			<h2>HTML Entities</h2>
 			<article>
 				<p>Non-breaking space: &#160;</p>
@@ -116,7 +116,7 @@
 	</main>
 	<footer id="footer">
 		<h2>Hidden comment:</h2>
-		<!--Subscribe for more animal facts.-->
+		<!--Subscribe for more animal facts. ／(=･ x ･=)＼-->
 	</footer>
 </body>
 </html>
