--- a/lib2024/assg-3/index.html
+++ b/lib2024/assg-3/index.html
@@ -9,8 +9,23 @@
 	<header id="header">
 </head>
 <body>
-	<header id="header">
-		<h1></h1>
-	</header>
+	<div id="wrapper" class="wrapper">
+		<section id="html-forms" class="main-section">
+			<form action="hereisapage.php" method="get">
+				<div id="fn-container" class="form-elem">
+					<label for="FirstName">First Name</label>
+					<input type="text" name="FirstName" id="FirstName" placeholder="Your first name here">
+				</div>
+				<div id="ln-container" class="form-elem">
+					<label for="LastName">Last Name</label>
+					<input type="text" name="LastName" id="LastName" placeholder="Your last name here">
+				</div>
+				<div id="email-container" class="form-elem">
+					<label for="email">Email Address</label>
+					<input type="email" name="email" id="email" placeholder="ihatesand@sw.com" required>
+				</div>
+			</form>
+		</section> 
+	</div>
 </body>
 </html>
