passwd, intro, DOB, mobile # fields added

--- a/lib2024/assg-3/index.html
+++ b/lib2024/assg-3/index.html
@@ -24,6 +24,10 @@
 					<label for="email">Email Address</label>
 					<input type="email" name="email" id="email" placeholder="ihatesand@sw.com" required>
 				</div>
+				<div id="pass-container" class="form-elem">
+					<label for="pass">Password</label>
+					<input type="password" name="pass" id="pass" required>
+				</div>
 			</form>
 		</section> 
 	</div>
