intro, DOB, mobile # fields actually added

--- a/lib2024/assg-3/index.html
+++ b/lib2024/assg-3/index.html
@@ -28,6 +28,19 @@
 					<label for="pass">Password</label>
 					<input type="password" name="pass" id="pass" required>
 				</div>
+				<div id="intro-container" class="form-elem">
+					<label for="introduction">Introduction</label>
+					<textarea name="introduction" id="introduction" placeholder="Tell us about yourself"></textarea>
+				</div>
+				<div id="spec-container" class="form-elem">
+					<label for="dte">Date of Birth</label>
+					<input type="date" name="dte" id="dte">
+					<label for="num">Mobile Number</label>
+					<input type="number" name="num" id="num" min="0000000000" max="9999999999" required>
+				</div>
+				<div >
+					<label></label>
+				</div>
 			</form>
 		</section> 
 	</div>
