province and country fields actually added

--- a/lib2024/assg-3/index.html
+++ b/lib2024/assg-3/index.html
@@ -59,10 +59,29 @@
 					<label for="city">City</label>
 					<input type="text" name="city" id="city" placeholder="Mos Eisley">
 				</div>
-				<div id="province-drop-container">
-					<label for="province">
-						
-					</label>
+				<div id="province-drop-container" class="form-elem">
+					<label for="province">Province of Residence:</label><
+					<select name="home-prov" id="home-prov">
+						<option value="tatooine">Tatooine</option>
+						<option value="coruscant">Coruscant</option>
+						<option value="kashyyk">Kashyyk</option>
+						<option value="dathomir">Dathomir</option>
+						<option value="naboo">Naboo</option>
+						<option value="alderaan">Alderaan</option>
+						<option value="bracca">Bracca</option>
+						<option value="jakku">Jakku</option>
+						<option value="endor">Endor</option>
+						<option value="crait">Crait</option>
+						<option value="dagobah">Dagobah</option>
+					</select>
+				</div>
+				<div id="country-drop-container" class="form-elem">
+					<select name="home-cntry" id="home-cntry">
+						<option value="oldrepublic">The Old Republic</option>
+						<option value="galacticrepublic">The Galactic Republic</option>
+						<option value="galacticempire">The Galactic Empire</option>
+						<option value="newrepublic">The New Republic</option>
+					</select>
 				</div>
 			</form>
 		</section> 
