switched to post from get

--- a/lib2024/assg-3/index.html
+++ b/lib2024/assg-3/index.html
@@ -13,7 +13,7 @@
 	</header>
 	<div id="wrapper" class="wrapper">
 		<section id="html-forms" class="main-section">
-			<form action="hereisapage.php" method="get">
+			<form action="hereisapage.php" method="post">
 				<div id="fn-container" class="form-elem">
 					<label for="FirstName">First Name</label>
 					<input type="text" name="FirstName" id="FirstName" placeholder="Anakin">
