updated areas of residence

--- a/lib2024/assg-3/index.html
+++ b/lib2024/assg-3/index.html
@@ -61,9 +61,9 @@
 					<label for="city">City</label>
 					<input type="text" name="city" id="city" placeholder="Mos Eisley" required>
 				</div>
-				<div id="province-drop-container" class="form-elem">
-					<label for="home-prov">Province of Residence</label>
-					<select name="home-prov" id="home-prov">
+				<div id="planet-drop-container" class="form-elem">
+					<label for="home-plan">Planet of Residence</label>
+					<select name="home-plan" id="home-plan">
 						<option value="tatooine">Tatooine</option>
 						<option value="coruscant">Coruscant</option>
 						<option value="kashyyk">Kashyyk</option>
@@ -78,8 +78,8 @@
 					</select>
 				</div>
 				<div id="country-drop-container" class="form-elem">
-					<label for="home-cntry">Country of Residence</label>
-					<select name="home-cntry" id="home-cntry">
+					<label for="gov-body">Governing Body</label>
+					<select name="gov-body" id="gov-body">
 						<option value="galactic_republic">The Galactic Republic</option>
 						<option value="galactic_empire">The Galactic Empire</option>
 						<option value="new_republic">The New Republic</option>
