--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -1,10 +1,81 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title></title>
+<html lang="en">
+<head id="head">
+	<title>Assignment 4</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<meta charset="utf-8">
+	<meta name="Author" content="Sabrina Fournier">
+	<meta name="description" content="This is my Assignment 4">
+	<meta name="keywords" content="HTML, HTML5, Homework, Assignment, Assignment 4">
 </head>
-<body>
-	<header></header>
-	<footer></footer>
+<body id="body">
+	<header class="site-header" id="site-header">
+		<div class="logo">
+			<img src="img/logo.png" alt="Logo">
+		</div>
+		<h1 id="head-1" class="head">Madame Miaou's Musings</h1>
+		<nav class="main-nav-container desktop-nav">
+			<ul class="header-li clearfix">
+				<li>
+					<a href="https://www.madamemiaou.com">Home</a>
+				</li>
+				<li>
+					<a href="https://www.madamemiaou.com/about">About</a>
+				</li>
+				<li>
+					<a href="https://www.madamemiaou.com/contact">Contact</a>
+				</li>
+				<li>
+					<a href="https://www.madamemiaou.com/work">Work</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
+	<main class="main clearfix" id="main">
+		<article class="main-article">
+			<section class="section" id="sec-writ">
+				<h2 id="main-head" class="head">Madame Miaou's Meow</h2>
+				<p id="main-para-1"class="para"> 
+					CONTENT 
+				</p>
+				<p id="main-para-2" class="para">
+					MORE CONTENT
+				</p>
+				<aside id="main-aside" class="main-article">
+					<h3 id="head-2" class="head">Meet Madame Miaou</h3>
+					<p id="aside-para" class="para">
+						CONTENT 
+					</p>
+				</aside>
+			</section>
+			<section class="section" id="sec-pic">
+				<h3 id="head-2" class="head">More Madame Miaou</h3>
+				<div class="pic-container clearfix"></div>
+					<div class="pic-slide">
+						<img src="????" alt="subimage1">
+					</div>
+					<div class="pic-slide"> 
+						<img src="????" alt="subimage2">
+					</div>
+					<div class="pic-slide">
+						<img src="????" alt="subimage3">
+					</div>
+			</section>
+		</article>
+	</main>
+	<footer class="footer" id="footer">
+		<div class="footer-container">
+			<section class="section" id="cr-footer-sec">
+				<p class="para" id="footer-para">
+					&copy;2020, All Rights Reserved.
+				</p>
+			</section>
+			<section class="section" id="pic-footer-sec">
+				<img src="img/facebook.png" alt="Facebook Logo">
+				<img src="img/youtube.png" alt="Youtube Logo">
+				<img src="img/twitter.png" align="Youtube Logo">
+				</section>
+		</div>
+	</footer>
 </body>
 </html>
