added style tag

--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -3,6 +3,7 @@
 <head id="head">
 	<title>Assignment 4</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<style type="text/css">
 	<meta charset="utf-8">
 	<meta name="Author" content="Sabrina Fournier">
 	<meta name="description" content="This is my Assignment 4">
