--- a/lib2024/assg-4/sss/sss.html
+++ b/lib2024/assg-4/sss/sss.html
@@ -10,8 +10,8 @@
 	Desktop
 	<h3>Prototype Image Link:</h3><img src="img/mockup.jpg" alt="Page Mock-up">
 
-	 <!-- Dimensions paragraph begins here -->
-	<h2>Dimensions</h2>
+	 <!-- Dimensions table begins here -->
+	<h2>Dimensions:</h2>
 	<table>
 		<tr>
 			<th>Element</th>
@@ -67,27 +67,56 @@
 			<td>Aside</td>
 	</table>
 
+	<!-- Colors table begins here --> 
+	<h2>Colors</h2>
+	<table>
+		<tr>
+			<th>Color</th>
+			<th>Used for</th>
+			<th>Used as</th>
+			<th>Hex Value</th>
+			<th>RGB Values</th>
+			<th>Opacity</th>
+		</tr>
+		<tr>
+			<td>Black</td>
+			<td>Text</td>
+			<td>Primary</td>
+			<td>#000000</td>
+			<td>RGB(0,0,0)</td>
+			<td>1</td>
+		</tr>
+		<tr>
+			<td>Green</td>
+			<td>Background</td>
+			<td>Primary</td>
+			<td>#7cc576</td>
+			<td>RGB(124, 197, 118)</td>
+			<td>1</td>
+		</tr>
+		<tr>
+			<td>Blue</td>
+			<td>Navigation</td>
+			<td>Accent</td>
+			<td>#6dcff6</td>
+			<td>RBG(109, 207, 246)</td>
+			<td>1</td>
+		</tr>
+		<tr>
+			<td>White</td>
+			<td>Background</td>
+			<td>Primary</td>
+			<td>#ffffff</td>
+			<td>RGB(255, 255, 255)</td>
+			<td>1</td>
+		</tr>
+	</table>
+
+	<!--Subtle background image and link -->
+	
 </body>
 </html>
 
-
-Dimensions:
-Element 	Width 	Height 	Parent
-Page 		100% 	Auto 	N/A
-Header 		100% 	1px 	Page
-Main 		100% 	Auto 	Page
-Article 	60% 	1px 	Main
-Aside 		90% 	1px 	Main
-Footer 		100% 	1px 	Page
-Image 		1px 	1px 	Aside
-
-Colors:
-
-Color 		Used for 	Used as 	Hex value 	RGB Values 		Opacity
-Black 		Text 		Primary 	#000000 	(0,0,0) 			1
-Green 		Background 	Primary 	#7cc576 	RGB(124,197,118) 	1
-Blue 		Navigation 	Accent 		#6dcff6 	RGB(109,207,246) 	1
-BG White 	Background 	Primary 	#ffffff 	RGB(255,255,255) 	1
 
 
 Background Images:
