added background image infor

--- a/lib2024/assg-4/sss/sss.html
+++ b/lib2024/assg-4/sss/sss.html
@@ -113,14 +113,8 @@
 	</table>
 
 	<!--Subtle background image and link -->
-	
+	<h2>Background Images:</h2>
+	<p>URL: https://www.toptal.com/designers/subtlepatterns/lilypads-pattern/</p>
+	<p>Style: Lilypads Pattern</p>
 </body>
 </html>
-
-
-
-Background Images:
-
-    URL: https://www.toptal.com/designers/subtlepatterns/white-waves-pattern/
-    Style: White Waves Pattern
-
