validated sss and fixed errors

--- a/lib2024/assg-4/sss.html
+++ b/lib2024/assg-4/sss.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Simple Style Schema</title>
 </head>
@@ -61,10 +61,12 @@
 			<td>1px</td>
 			<td>Article</td>
 		</tr>
+		<tr>
 			<td>Image2</td>
 			<td>1px</td>
 			<td>1px</td>
 			<td>Aside</td>
+		</tr>
 	</table>
 
 	<!-- Colors table begins here --> 
