added more image information

--- a/lib2024/assg-4/sss.html
+++ b/lib2024/assg-4/sss.html
@@ -65,6 +65,18 @@
 			<td>Image2</td>
 			<td>1px</td>
 			<td>1px</td>
+			<td>Article</td>
+		</tr>
+		<tr>
+			<td>Image3</td>
+			<td>1px</td>
+			<td>1px</td>
+			<td>Article</td>
+		</tr>
+		<tr>
+			<td>Image4</td>
+			<td>1px</td>
+			<td>1px</td>
 			<td>Aside</td>
 		</tr>
 	</table>
