added images, paragraphs, socials links, comments

--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -3,13 +3,16 @@
 <head id="head">
 	<title>Assignment 4</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<style type="text/css">
 	<meta charset="utf-8">
 	<meta name="Author" content="Sabrina Fournier">
 	<meta name="description" content="This is my Assignment 4">
 	<meta name="keywords" content="HTML, HTML5, Homework, Assignment, Assignment 4">
 </head>
+
+<!--Main body of code begins here-->
+
 <body id="body">
+	<!--Logo and Navigational Header here-->
 	<header class="site-header" id="site-header">
 		<div class="logo">
 			<img src="img/logo.png" alt="Logo">
@@ -32,50 +35,88 @@
 			</ul>
 		</nav>
 	</header>
+
+	<!--Main Article of page begins here-->
 	<main class="main clearfix" id="main">
 		<article class="main-article">
+
+			<!--First Section of Main Article-->
 			<section class="section" id="sec-writ">
 				<h2 id="main-head" class="head">Madame Miaou's Meow</h2>
 				<p id="main-para-1"class="para"> 
-					CONTENT 
+					Cat ipsum dolor sit amet, culpa and aspernatur. Ratione et eum aliqua non eum but vitae. Eius dolor voluptas, excepteur fugiat or quis. Quam labore perspiciatis eiusmod nostrud dicta. Deserunt quisquam tempor. Suscipit. Quae. Sit sit nihil. Voluptas quasi for vitae autem for incididunt. Elit. Tempora ullam elit for cupidatat so aut inventore. Eum aute vel cupidatat for lorem, magni unde. Laboriosam autem ipsum. Do ab exercitationem accusantium dolorem. Incidunt laborum eiusmod or si. Id exercitationem yet eaque. Reprehenderit officia but elit and ipsa. Eos sequi so odit, mollit quae. Sunt inventore voluptas. Cupidatat ullam but ut but consequat so dolorem. Cupidatat commodo. Nequeporro natus.
 				</p>
+				<br>
 				<p id="main-para-2" class="para">
-					MORE CONTENT
+					Quisquam cupidatat quis iure. Quia totam rem eius odit but omnis so ullam. Aliqua proident. Et eu consectetur. Inventore pariatur dolore voluptas molestiae for cillum. Amet quo odit aliquip and fugiat ullamco. Magni autem numquam for magna or minim. Eum. Cupidatat non mollit dolore sunt. Excepteur irure eu or consectetur and doloremque. Laboris cillum. Si veniam, or ratione, accusantium minima reprehenderit but nisi. Qui duis, for ex occaecat omnis exercitation vel. Voluptas dicta duis eos yet occaecat or adipisci totam. Rem. Fugit ullamco, tempor. Ipsum velitesse magna. Corporis elit quis aliquid. Laboris excepteur yet nesciunt yet beatae for unde. 
 				</p>
+				<!--Aside here-->
 				<aside id="main-aside" class="main-article">
+					<div class="aside-img">
+						<figure>
+							<img src="img/ginger-tabby.jpg" alt="Ginger Tabby Kitten">
+						</figure>
+					</div>
 					<h3 id="head-2" class="head">Meet Madame Miaou</h3>
 					<p id="aside-para" class="para">
-						CONTENT 
+						Cat ipsum dolor sit amet, himalayan. Devonshire rex ocelot. Ragdoll egyptian mau. American shorthair ocelot. Lynx russian blue, norwegian forest yet grimalkin american shorthair. Devonshire rex puma norwegian forest. Norwegian forest mouser or thai so havana brown. Abyssinian kitten. American bobtail maine coon scottish fold or thai sphynx tom. Burmese puma for birman norwegian forest. Ocicat kitty siamese for american shorthair and siamese. Tom mouser, donskoy lion yet munchkin savannah. Tom himalayan, american bobtail for lion but tabby thai manx. 
 					</p>
 				</aside>
 			</section>
+
+			<!--Second Section of Main Article here-->
 			<section class="section" id="sec-pic">
 				<h3 id="head-2" class="head">More Madame Miaou</h3>
 				<div class="pic-container clearfix"></div>
 					<div class="pic-slide">
-						<img src="????" alt="subimage1">
+						<figure>
+							<img src="img/tummy-kitten.jpg" alt="Grey Kitten Showing Tummy">
+						</figure>	
+						<figcaption>My Sister Sally</figcaption>
 					</div>
 					<div class="pic-slide"> 
-						<img src="????" alt="subimage2">
+						<figure>
+							<img src="img/tree-kitten.jpg" alt="Brown Kitten in Tree">
+						</figure>
+						<figcaption>My Brother Breannan</figcaption>
 					</div>
 					<div class="pic-slide">
-						<img src="????" alt="subimage3">
+						<figure>
+							<img src="img/sleeping-kitten.jpg" alt="Tabby Kitten Sleeping">
+						</figure>
+						<figcaption>My Cousin Clementine</figcaption>
 					</div>
 			</section>
 		</article>
 	</main>
+
+	<!--Footer starts here-->
 	<footer class="footer" id="footer">
 		<div class="footer-container">
+
+			<!--Copyright information-->
 			<section class="section" id="cr-footer-sec">
 				<p class="para" id="footer-para">
 					&copy;2020, All Rights Reserved.
 				</p>
 			</section>
+
+			<!--Social media links-->
 			<section class="section" id="pic-footer-sec">
-				<img src="img/facebook.png" alt="Facebook Logo">
-				<img src="img/youtube.png" alt="Youtube Logo">
-				<img src="img/twitter.png" align="Youtube Logo">
-				</section>
+				<nav class="footer-nav-container desktop-nav">
+					<ul class="footer-li clearfix">
+						<li>
+							<a href="https://www.facebook.com"><img src="img/facebook.png" alt="Facebook Logo"></a>
+						</li>
+						<li>
+							<a href="https://www.youtube.com"><img src="img/youtube.png" alt="Youtube Logo"></a>
+						</li>
+						<li>
+							<a href="https://www.twitter.com"><img src="img/twitter.png" align="Twitter Logo"></a>
+						</li>
+					</ul>
+				</nav>
+			</section>
 		</div>
 	</footer>
 </body>
