added divs, validated code

--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -18,19 +18,27 @@
 			<img src="img/logo.png" alt="Logo">
 		</div>
 		<h1 id="head-1" class="head">Madame Miaou's Musings</h1>
-		<nav class="main-nav-container desktop-nav">
+		<nav class="main-nav-container">
 			<ul class="header-li clearfix">
 				<li>
-					<a href="https://www.madamemiaou.com">Home</a>
+					<div class="header-li" id="home-li">
+						<a href="https://www.madamemiaou.com">Home</a>
+					</div>
 				</li>
 				<li>
-					<a href="https://www.madamemiaou.com/about">About</a>
+					<div class="header-li" id="about-li">
+						<a href="https://www.madamemiaou.com/about">About</a>
+					</div>
 				</li>
 				<li>
-					<a href="https://www.madamemiaou.com/contact">Contact</a>
+					<div class="header-li" id="contact-li">
+						<a href="https://www.madamemiaou.com/contact">Contact</a>
+					</div>
 				</li>
 				<li>
-					<a href="https://www.madamemiaou.com/work">Work</a>
+					<div class="header-li" id="work-li">
+						<a href="https://www.madamemiaou.com/work">Work</a>
+					</div>
 				</li>
 			</ul>
 		</nav>
@@ -43,7 +51,7 @@
 			<!--First Section of Main Article-->
 			<section class="section" id="sec-writ">
 				<h2 id="main-head" class="head">Madame Miaou's Meow</h2>
-				<p id="main-para-1"class="para"> 
+				<p id="main-para-1" class="para"> 
 					Cat ipsum dolor sit amet, culpa and aspernatur. Ratione et eum aliqua non eum but vitae. Eius dolor voluptas, excepteur fugiat or quis. Quam labore perspiciatis eiusmod nostrud dicta. Deserunt quisquam tempor. Suscipit. Quae. Sit sit nihil. Voluptas quasi for vitae autem for incididunt. Elit. Tempora ullam elit for cupidatat so aut inventore. Eum aute vel cupidatat for lorem, magni unde. Laboriosam autem ipsum. Do ab exercitationem accusantium dolorem. Incidunt laborum eiusmod or si. Id exercitationem yet eaque. Reprehenderit officia but elit and ipsa. Eos sequi so odit, mollit quae. Sunt inventore voluptas. Cupidatat ullam but ut but consequat so dolorem. Cupidatat commodo. Nequeporro natus.
 				</p>
 				<br>
@@ -66,25 +74,25 @@
 
 			<!--Second Section of Main Article here-->
 			<section class="section" id="sec-pic">
-				<h3 id="head-2" class="head">More Madame Miaou</h3>
+				<h3 id="head-3" class="head">More Madame Miaou</h3>
 				<div class="pic-container clearfix"></div>
 					<div class="pic-slide">
 						<figure>
 							<img src="img/tummy-kitten.jpg" alt="Grey Kitten Showing Tummy">
+							<figcaption>My Sister Sally</figcaption>
 						</figure>	
-						<figcaption>My Sister Sally</figcaption>
 					</div>
 					<div class="pic-slide"> 
 						<figure>
 							<img src="img/tree-kitten.jpg" alt="Brown Kitten in Tree">
+							<figcaption>My Brother Breannan</figcaption>
 						</figure>
-						<figcaption>My Brother Breannan</figcaption>
 					</div>
 					<div class="pic-slide">
 						<figure>
 							<img src="img/sleeping-kitten.jpg" alt="Tabby Kitten Sleeping">
+							<figcaption>My Cousin Clementine</figcaption>
 						</figure>
-						<figcaption>My Cousin Clementine</figcaption>
 					</div>
 			</section>
 		</article>
@@ -112,7 +120,7 @@
 							<a href="https://www.youtube.com"><img src="img/youtube.png" alt="Youtube Logo"></a>
 						</li>
 						<li>
-							<a href="https://www.twitter.com"><img src="img/twitter.png" align="Twitter Logo"></a>
+							<a href="https://www.twitter.com"><img src="img/twitter.png" alt="Twitter Logo"></a>
 						</li>
 					</ul>
 				</nav>
